=================== Release 0.1.0 2014-12-29 =====================
Description
    * First usable version of this library. Contains the main interface for the library.